src/objects/Balance__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accountable Code</label>
        <referenceTo>AccountableCode__c</referenceTo>
        <relationshipLabel>Balance</relationshipLabel>
        <relationshipName>Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coin__c</fullName>
        <label>Coin</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Balance</relationshipLabel>
        <relationshipName>Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Balance</label>
    <nameField>
        <label>Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>